fixed z-index for background in small devices

--- a/Stylesheets/intro.css
+++ b/Stylesheets/intro.css
@@ -11,6 +11,7 @@ aside {
     width: 100%;
     height: 12rem;
     overflow: hidden;
+    z-index: 1;
 }
 
 .intro-background {
