--- a/Stylesheets/responsive-design.css
+++ b/Stylesheets/responsive-design.css
@@ -35,13 +35,14 @@
 @media (max-width: 768px) {
     
     header {
-        position: unset;
+        position: relative;
         display: flex;
+        z-index: 99;
     }
     
     aside {
         background-color: #F5EAEC;
-        position: unset;
+        position: static;
         display: flex;
         flex-direction: column;
         height: auto;
@@ -55,6 +56,7 @@
     }
 
     #intro-container { height: 6rem; }
+    .intro-background { max-height: 12rem; }
 
     #todo-container {
         height: auto;
@@ -70,15 +72,24 @@
     .todoToday, .todo-selected, .todo-all { max-width: unset; }
     .calendar { width: 95%;}
     footer { position: static; }
+    
 }
 
 /* Extra small devices 600px and below */
 
 @media (max-width: 600px) {
 
+    header { 
+        position: relative; 
+        z-index: 99;
+    }
+
     .calendar, .todo-selected { display: none; }
-    footer { position: absolute; 
-    white-space:nowrap;
-    font-size: 0.55rem; }
+
+    footer { 
+        position: absolute; 
+        white-space:nowrap;
+        font-size: 0.55rem; 
+    }
 }
 
